views/refbook.scss
// Refbook CSS

$footer-height: 36px;
$slide-left: 30px;
@import url("http://fonts.googleapis.com/css?family=Exo+2:400,700&subset=latin,latin-ext");
@import url("http://fonts.googleapis.com/css?family=Fanwood+Text");

// colors
$orange: #ff6600; //orange
$red: red;
$cyan: cyan;
// $cyan: #00ff00; //lime green
$gray: #767676; //gray
// $links: #000066;
// $links: #ff8000;
$links: #000;

* {
    font-family: 'Exo 2', 'sans-serif';
}

html, body {
    margin: 0;
    padding: 0;
    height: 100%;
    font-size: 18px;
    // background-image: url("../images/satinweave.png"); 
    
    

    a {
        color: $gray;
        &:hover {
            color: $links;
            // text-decoration: none;
        }
    }

    ul {
        list-style-type: none;
        margin: 0;
    }

    .error {
        width: 63%;
        margin: 0 auto;
        h1, h2 {
            text-align: center; 
            padding-top: 50px;
        }
        .right {
            float: right;
            padding-right: 20px;
        }
    }

    .issue {
        color: $red;
    }
}

.content {
    min-height: 100%;
    position: relative;
}

.top {
    // the big black bar
    // padding: 10px;
    .topbar {
        height: 48px;
        color: #fff;
        background-color: #000;
        clear: both;
        // margin-left: -30px;
        a {
            color: #fff;
            // color: green;
        }

        .no-kids {
            border-bottom: 1px solid #fff;
            &:hover {
                border-bottom: 1px solid #000;
            }
        }

        .kids {
            border-bottom: 1px solid $cyan;
            &:hover {
                & > a {
                    // color: $cyan;
                    
                    // border-bottom: 1px solid #fff;
                }
           }
        }

        .active {
            border-bottom: 1px solid #000; 
            // color: $cyan;
        }

        .kids.active {
            border-bottom: 1px dashed $cyan;
        }

        ul {
            padding-top: 6px;
            margin-left: -1.5em;
            li {
                display: inline-block;
            }
            .right {
                float: right;
                margin-right: 10px;
                padding: 5px;
            }
            .icon {
                padding: 0;
                border-bottom: 1px solid #fff; 
                &:hover {
                    border-bottom: 1px solid #000;
                }
            }
        }

        // dropdown code adapted from: http://code-tricks.com/simple-css-drop-down-menu/
        #menu {
            a {
                text-decoration: none;
                padding: 5px;
                display: inline-block;
            }            

            li {
                position: relative;
                background-color: #000;
                &:hover {
                    .sub-menu {
                        display: block;
                    }
                }
            }

            .sub-menu {
                padding: 0;
                // padding-top: 5px;
                margin: 0;
                display: none;
                position: absolute;
                top: 30px;
                left: 0;
                // width: 100px;
                width: 100%;
                a {
                    // padding: 5px;
                    &:hover {
                        color: $cyan;
                    }
                }
                li {
                    width: inherit;
                }
            }
        }

        
    }
    // login/logout text
    .header {
        float: right;
        padding-right: 20px;
        text-align: right;
        a {
            color: $gray;
            &:hover {
                color: $links;
            }
        }
    }
}

.mid {
    padding-bottom: $footer-height;
    padding-left: $slide-left;

    ::selection {
        color: #fff;
        background: #000;
    }
    
    ::-moz-selection {
        color: #fff;
        background: #000;
    }

    h1 {
        font-family: 'Georgia', serif;
        font-size: 48px;
        margin-top: .3em;
        margin-bottom: .3em;
    }

    // a {
    //     color: $gray;
    //     &:hover {
    //         color: $links;
    //     }
    // }

    p {
        width: 60%;
        padding-left: 30px;
        li {
            width: 60%;
        }
    }

    .form_box {
        padding-left: 30px;
        padding-right: 30px;
        // thought I might like these, I don't. 
        // border-left: 1px solid black;
        // border-right: 1px solid black;
        width: 250px;
        clear: both;

        input {
            width: 100%;
            clear: both;
            margin-bottom: 20px;
        }

        select {
            width: 100%;
            clear: both;
            margin-bottom: 20px;
        }
    }

    .name {
        color: $red;
        text-decoration: underline;
    }

    .rating {
        text-decoration: underline;
    }

    #regions {
        padding-left: 0;
        color: darkgray;
        // a:hover {
            // text-decoration: none;
            // color: darkgray;
        // }
        li {
            display: inline;
        }
    }

    .active {
        color: #000;
        text-decoration: none;
    }

    .table_box {
        width: 85%;
    }

    #theTable {
        td {
            padding-left: 10px;
            padding-right: 20px;
        }
        thead {
            // border-bottom: 1px solid #000;
            background: black;
            color: white;
        }
        tbody {
            // .odd {
            //     // background: #bcbcbc;
            //     background: #cdcdcd;
            // }
            // .even {
            //     // background: #808080;
            // }
            tr {
                background: #cdcdcd;
            }
            .name {
                // go $links, baby
                color: #000;
                text-decoration: none;
            }
            .mine {
                background-color: #00274c;
                color: #ffcb05;
            }
            // .y {
            //     background-color: #50e000;
            // }
            // .n {
            //     background-color: #ff2100;
            // }
        }
    }

    .skinny {
        width: 60%;
    }

    #prof_pic {
        float: right;
        margin-right: 120px;
        border: 1px solid #000;
    }

    .bullets {
        list-style-type: disc;
        padding-left: 80px;
    }
}


.bot {
    position: absolute;
    bottom: 0;
    width: 100%;
    height: $footer-height;
    background: black;
    color: white;

    p {
        // padding-left: $slide-left;
        padding-left: 10px;
        // margin-left: -2em;
        font-size: 12px;
    }

    a {
        color: #fff;
        &:visited {
            color: #fff;
        }
    }

}

